<resources>
    <string name="app_name">SnackAttack</string>
    <string name="isVeggieCheckbox">Vegetarian</string>
    <string name="nonVeggieCheckbox">Non-Vegetarian</string>
    <string name="placeOrderButton">Place Order</string>
    <string name="isVeggie_label">Veggie</string>
    <string name="isNonVeggie_label">Non-Veggie</string>
    <string name="thank_you_for_placing_your_order">Thank you for placing your order!</string>
    <string name="finish_order_button">Finish</string>
    <string name="items_will_be_waiting">Your items will be waiting for you somewhere… I hope:</string>
    <string name="action_add_snack">Add Snack</string>
    <string name="snack_name_edittext_hint">Snack Name</string>
    <string name="snack_description_edittext_hint">Snack Description</string>
    <string name="add_snack_button">Add Snack</string>
    <string name="error_new_snack_name_invalid">Please enter a snack name.</string>
    <string name="error_new_snack_description_invalid">Please enter a snack description.</string>
    <string name="addSnack_isVeggie_checkBox">This snack is 100% vegetarian friendly.</string>
    <string name="no_snacks_playful_explanation">Just kidding! You\'ve actually just filtered them all out.\nPlease
        select Vegetarian or Non-Vegetarian from the checkboxes above.</string>
    <string name="no_snacks_playful_title">You\'ve eaten all the snacks!</string>
    <string name="order_something_title">Hey!</string>
    <string name="order_something_body">Order something, silly!</string>
    <string name="add_to_order_checkBox">Add to Order</string>
    <string name="toggle_card_view">Toggle card view</string>
    <string name="this_meal_is_vegetarian">✔ This meal is vegetarian</string>
    <string name="this_meal_is_not_vegetarian">This meal is non-vegetarian.</string>
</resources>
