<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.onebigfunction.snackattack.order.OrderActivity"
    tools:menu="@menu/menu_order_activity">

    <View
        android:id="@+id/submenu_background"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="@+id/isVeggie_checkBox"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/isVeggie_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/marginSmall"
        android:checked="true"
        android:text="@string/isVeggieCheckbox"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/isNonVeggie_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:checked="true"
        android:text="@string/nonVeggieCheckbox"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/isVeggie_checkbox"/>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/marginSmall"
        android:background="@color/darkGray"
        app:layout_constraintBottom_toTopOf="@+id/snackList_recyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isVeggie_checkbox"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/snackList_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/marginMedium"
        android:layout_marginEnd="@dimen/marginSmall"
        android:layout_marginStart="@dimen/marginSmall"
        android:layoutAnimation="@anim/layout_item_from_right"
        app:layout_constraintBottom_toTopOf="@id/order_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        tools:listitem="@layout/snack_list_item"
        />

    <LinearLayout
        android:id="@+id/no_snacks_to_display_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginMedium"
        android:layout_marginStart="@dimen/marginMedium"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Oh, No!"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginSmall"
            android:text="@string/no_snacks_playful_title"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_snacks_playful_explanation"
            android:textAlignment="center"
            android:textSize="16sp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginMedium"
        android:layout_marginEnd="@dimen/marginMedium"
        android:text="@string/placeOrderButton"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>
